--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "resume-build",
+  "name": "resumebuilder",
   "version": "0.1.0",
+  "homepage": "https://manojbhandi.github.io/resumebuilder",
   "private": true,
   "dependencies": {
     "@fontsource/poppins": "^5.1.0",
@@ -25,6 +26,8 @@
     "yup": "^1.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.12"
   }
 }
