--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
