--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-  ]
+    "src",
+    "src/**/*.ts",
+    "next-env.d.ts",
+    "pages/**/*",
+    "src/**/*",
+  ],
 }
